# Unify

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  cli.py  premake5.lua
Editor/src/: main.cpp
Unify/: unify.h  unpch.h
Unify/include/: core.h
Unify/include/core/: core.h
Unify/include/events/: buttonEvents.h  events.h  keyEvents.h  mouseEvents.h  windowEvents.h
Unify/include/managers/: managers.h
Unify/src/core/: core.cpp
Unify/src/events/: events.cpp
Unify/src/managers/: logManager.cpp  windowManager.cpp
tools/: build.py  gen.py  globals.py  run.py  version.py
unify/src/: log.h  unify.h
unify/src/application/: application.cpp  application.h  entrypoint.h
unify/src/core/: core.cpp  core.h  events.cpp  events.h  logger.cpp  logger.h  renderer.cpp  renderer.h  window.cpp  window.h  windowCallbacks.h
unify/src/graphics/: opengl.cpp  opengl.h
unify/src/pch/: un2pch.cpp  un2pch.h
unify2/include/unify2/: engine.h
unify2/src/: application.cpp  application.h  engine.cpp  engine.h  entrypoint.h  log.h  macros.h  un2pch.cpp  un2pch.h  unify2.h
unify2/src/application/: application.cpp  application.h  entrypoint.h
unify2/src/core/: core.cpp  core.h  events.cpp  events.h  logger.cpp  logger.h  window.cpp  window.h
unify2/src/pch/: un2pch.h
unifyeditor/: imgui.ini
unifyeditor/res/shaders/: fragmentShader.glsl  vertexShader.glsl
unifyeditor/shaders/: fragmentShader.glsl  vertexShader.glsl
unifyeditor/src/: app.cpp
unifyeditor2/src/: app.cpp  main.cpp
